fix logo and user profile alignment

--- a/source/web/core.sph/Content/theme.matyie/header.less
+++ b/source/web/core.sph/Content/theme.matyie/header.less
@@ -16,7 +16,11 @@ header {
         font-size: 20px;
         font-weight: bold;
         margin-top: 13px;
-        padding-left: 0px;
+        padding-left: 5px;
+    }
+
+    #SphLogo {
+        margin: 10px 0px 0px 15px;
     }
 
     div.nav-header, div.nav-header > div, div.nav-header > ul {
@@ -82,4 +86,10 @@ header {
     font-weight: bold;
     font-size: large;
     color: floralwhite;
+}
+
+
+
+#user-profile-split-button {
+    margin: 10px 0px 0px 0px;
 }
